[package]
name = "snake"
version = "0.1.0"
authors = ["Johan Lindfors <johan.lindfors@coderox.se>"]
build = "build.rs"

[dependencies.rand]
version = "*"

[target.'cfg(unix)'.dependencies.sdl2]
version = "0.32.2"
features = ["bundled"]

[target.'cfg(windows)'.dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]