[package]
name = "snake"
version = "0.1.0"
authors = ["Johan Lindfors <johan.lindfors@coderox.se>"]
build = "build.rs"

[dependencies.rand]
version = "*"

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 =  { version = "0.32.2", features = ["bundled"]}

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 =  { version = "0.32.2", features = ["bundled", "static-link"]}
