[package]
name = "snake"
version = "0.1.0"
authors = ["Johan Lindfors <johan.lindfors@coderox.se>"]
build = "build.rs"

[dependencies]
rand = { version = "*" }
sdl2 = { version = "0.32.2", default-features = false }

[features]
default = []
sdl2_mac = ["sdl2/bundled"]
sdl2_windows = ["sdl2/bundled", "sdl2/static-link"]